<resources>
    <string name="app_name">BUSCAR</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">329103501213041</string>
    <string name="fb_login_protocol_scheme">fb329103501213041</string>
    <string name="cancel_login">Se cancelo el ingreso</string>
    <string name="error_login">Error al ingresar</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="firebase_error_login">ERROR FIREBASE</string>
    <string name="title_activity_menumain">menumain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_busqueda">BusquedaActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="tab_text_1">MASCOTA PERDIDA</string>
    <string name="tab_text_2">MASCOTA HERIDA</string>
    <string name="tab_text_3">MASCOTA EN ADOPCIÓN</string>
    <string name="tab_text_4">MATERIAL EDUCATIVO</string>
    <string name="tab_text_5">OBJETOS PERSONALES</string>
    <string name="tab_text_6">PRENDAS DE VESTIR</string>
    <string name="tab_text_7">OTROS</string>
    <string name="title1">Bienvenido</string>
    <string name="title2">Publicar Mascota perdidos</string>
    <string name="title3">Buscar mascotas</string>
    <string name="title4">Comenzemos</string>
    <string name="description1">Esta es una aplicación hecha para las personas que hayan perdido a sus mascotas, hayan encontrado una herida o busquen adoptar una mascota.</string>
    <string name="description2">Puedes publicar mascotas cuando hayas encontrado uno tomando una foto y poniendole una descripción, ayudando a lograr devolverlo.</string>
    <string name="description3">Buscar dentro la aplicación las diferentes publicaciones segun sea el caso.</string>
    <string name="objeto">Descripción.</string>

    <string name="siguiente">Siguiente</string>
    <string name="atras">Atras</string>
    <string name="comenzar">Comenzar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_first_layout">first_layout</string>
</resources>
