<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intros.Intro2"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageViewIn"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/send"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="@color/colorIcons"
        android:textSize="30sp"
        android:fontFamily="blond"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description2"
        android:textColor="@color/colorIcons"
        android:fontFamily="blond"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/slide2back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|start"
            android:text="@string/atras"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="blond"/>
        <TextView
            android:id="@+id/slide2siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:text="@string/siguiente"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="blond"/>


    </LinearLayout>

</LinearLayout>