<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intros.Intro1"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/colorIcons"
        android:textSize="50sp"
        android:fontFamily="blond"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:gravity="center"
        android:text="@string/description1"
        android:fontFamily="blond"
        android:textColor="@color/colorIcons"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/slide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:text="@string/siguiente"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="blond"
            />


    </LinearLayout>
</LinearLayout>